Updated ICUBcontrib to provide macros to export libraries, and custom CMake options; modified set_contrib_default_prefix macro name to have 'icubcontrib' prefix, also in user code
svn path=/trunk/iCub/contrib/src/ICUBcontrib/; revision=26883

--- a/templates/ICUBcontribConfig.cmake.in
+++ b/templates/ICUBcontribConfig.cmake.in
@@ -5,6 +5,7 @@
 #This file is automatically configured by CMake
 
 set(ICUBCONTRIB_INSTALL_PREFIX "@CMAKE_INSTALL_PREFIX@")
+set(ICUBCONTRIB_MODULE_DIR ${ICUBCONTRIB_INSTALL_PREFIX}/@ICUBCONTRIB_MODULE_DIR@)	
 set(ICUBCONTRIB_MODULE_PATH ${ICUBCONTRIB_INSTALL_PREFIX}/@ICUBCONTRIB_MODULE_DIR@)	
 set(ICUBCONTRIB_CONFIG_INSTALL_DIR "@ICUBCONTRIB_CONFIG_INSTALL_DIR@")
 set(ICUBCONTRIB_PLUGIN_MANIFESTS_INSTALL_DIR "@ICUBCONTRIB_PLUGIN_MANIFESTS_INSTALL_DIR@")
