--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,9 +15,9 @@ include(YarpInstallationHelpers)
 yarp_configure_external_installation(ICUBcontrib)
 set(ICUBCONTRIB_MODULE_DIR share/${PROJECT_NAME}/cmake)
 
-configure_file(${CMAKE_SOURCE_DIR}/ICUBcontribConfig.cmake.in
+configure_file(${CMAKE_SOURCE_DIR}/templates/ICUBcontribConfig.cmake.in
                  ${CMAKE_BINARY_DIR}/ICUBcontribConfig.cmake.build @ONLY)
 
 install(FILES ${CMAKE_BINARY_DIR}/ICUBcontribConfig.cmake.build DESTINATION lib/${PROJECT_NAME} RENAME ICUBcontribConfig.cmake)
-install(FILES ICUBcontribHelpers.cmake DESTINATION ${ICUBCONTRIB_MODULE_DIR})
-
+install(FILES ICUBcontribHelpers.cmake ICUBcontribOptions.cmake DESTINATION ${ICUBCONTRIB_MODULE_DIR})
+install(FILES templates/icubcontrib-config-install.cmake.in templates/icubcontrib-config-uninstall.cmake.in DESTINATION ${ICUBCONTRIB_MODULE_DIR}/templates)
