--- a/templates/ICUBcontribConfig.cmake.in
+++ b/templates/ICUBcontribConfig.cmake.in
@@ -4,17 +4,14 @@
 
 #This file is automatically configured by CMake
 
+find_package(YARP REQUIRED QUIET)
+list(APPEND CMAKE_MODULE_PATH ${YARP_MODULE_PATH})
+
+set(YARP_FORCE_DYNAMIC_PLUGINS TRUE CACHE INTERNAL "ICUBcontrib modules are always built with dynamic plugins")
+
+include(YarpInstallationHelpers)
+yarp_configure_external_installation(ICUBcontrib)
+
 set(ICUBCONTRIB_INSTALL_PREFIX "@CMAKE_INSTALL_PREFIX@")
-set(ICUBCONTRIB_MODULE_DIR ${ICUBCONTRIB_INSTALL_PREFIX}/@ICUBCONTRIB_MODULE_DIR@)	
-set(ICUBCONTRIB_MODULE_PATH ${ICUBCONTRIB_INSTALL_PREFIX}/@ICUBCONTRIB_MODULE_DIR@)	
-set(ICUBCONTRIB_CONFIG_INSTALL_DIR "@ICUBCONTRIB_CONFIG_INSTALL_DIR@")
-set(ICUBCONTRIB_PLUGIN_MANIFESTS_INSTALL_DIR "@ICUBCONTRIB_PLUGIN_MANIFESTS_INSTALL_DIR@")
-set(ICUBCONTRIB_MODULES_INSTALL_DIR "@ICUBCONTRIB_MODULES_INSTALL_DIR@")
-set(ICUBCONTRIB_APPLICATIONS_INSTALL_DIR "@ICUBCONTRIB_APPLICATIONS_INSTALL_DIR@")
-set(ICUBCONTRIB_TEMPLATES_INSTALL_DIR "@ICUBCONTRIB_TEMPLATES_INSTALL_DIR@")
-set(ICUBCONTRIB_APPLICATIONS_TEMPLATES_INSTALL_DIR "@ICUBCONTRIB_APPLICATIONS_TEMPLATES_INSTALL_DIR@")
-set(ICUBCONTRIB_MODULES_TEMPLATES_INSTALL_DIR "@ICUBCONTRIB_MODULES_TEMPLATES_INSTALL_DIR@")
-set(ICUBCONTRIB_CONTEXTS_INSTALL_DIR "@ICUBCONTRIB_CONTEXTS_INSTALL_DIR@")
-set(ICUBCONTRIB_ROBOTS_INSTALL_DIR "@ICUBCONTRIB_ROBOTS_INSTALL_DIR@")
-
-
+set(ICUBCONTRIB_MODULE_DIR ${ICUBCONTRIB_INSTALL_PREFIX}/@ICUBCONTRIB_MODULE_DIR@)
+set(ICUBCONTRIB_MODULE_PATH ${ICUBCONTRIB_INSTALL_PREFIX}/@ICUBCONTRIB_MODULE_DIR@)
