--- a/templates/ICUBcontribConfig.cmake.in
+++ b/templates/ICUBcontribConfig.cmake.in
@@ -10,7 +10,7 @@ list(APPEND CMAKE_MODULE_PATH ${YARP_MODULE_PATH})
 set(YARP_FORCE_DYNAMIC_PLUGINS TRUE CACHE INTERNAL "ICUBcontrib modules are always built with dynamic plugins")
 
 include(YarpInstallationHelpers)
-yarp_configure_external_installation(ICUBcontrib)
+yarp_configure_external_installation(ICUBcontrib NO_PATH_D)
 
 set(ICUBCONTRIB_INSTALL_PREFIX "@CMAKE_INSTALL_PREFIX@")
 set(ICUBCONTRIB_MODULE_DIR ${ICUBCONTRIB_INSTALL_PREFIX}/@ICUBCONTRIB_MODULE_DIR@)
