--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,22 +3,16 @@
 # CopyPolicy: Released under the terms of the GNU GPL v2.0.
 
 cmake_minimum_required(VERSION 3.5)
-
 project(ICUBcontrib NONE)
 
-set(YARP_REQUIRED_VERSION 2.3.72)
-find_package(YARP REQUIRED)
-if(${YARP_VERSION} VERSION_LESS ${YARP_REQUIRED_VERSION})
-  message(FATAL_ERROR "YARP version ${YARP_VERSION} not sufficient, at least version ${YARP_REQUIRED_VERSION} is required.")
-endif()
-
+find_package(YARP 3.0.0 REQUIRED)
 set(YARP_FORCE_DYNAMIC_PLUGINS TRUE CACHE INTERNAL "ICUBcontrib is always built with dynamic plugins")
 
 yarp_configure_external_installation(ICUBcontrib WITH_PLUGINS)
 set(ICUBCONTRIB_MODULE_DIR share/${PROJECT_NAME}/cmake)
 
 configure_file(${CMAKE_SOURCE_DIR}/templates/ICUBcontribConfig.cmake.in
-                 ${CMAKE_BINARY_DIR}/ICUBcontribConfig.cmake.build @ONLY)
+               ${CMAKE_BINARY_DIR}/ICUBcontribConfig.cmake.build @ONLY)
 
 install(FILES ${CMAKE_BINARY_DIR}/ICUBcontribConfig.cmake.build DESTINATION lib/${PROJECT_NAME} RENAME ICUBcontribConfig.cmake)
 install(FILES ICUBcontribHelpers.cmake ICUBcontribOptions.cmake DESTINATION ${ICUBCONTRIB_MODULE_DIR})
